# vreng

./: .gitignore  ANNOUNCE  AUTHORS  AUTHORS.md  CONTRIBUTING  COPYRIGHT  ChangeLog  Changelog.md  FIX  INSTALL  INSTALL.md  LICENSE  LICENSE.md  Makefile.am  README  README.md  TODO  VERSION.md  acinclude.m4  autogen.sh  build  clone  commit  config.h.in  configure.ac  git-chk  github  vr  vrlocal
src/2d/: Makefile.am  avi.cpp  avi.hpp  bmp.cpp  capture.cpp  capture.hpp  dds.cpp  flare.cpp  flare.hpp  gif.cpp  glpng.cpp  glpng.hpp  img.cpp  img.hpp  jpg.cpp  pcx.cpp  pgm.cpp  png.cpp  ppm.cpp  psd.cpp  sgi.cpp  svg.cpp  texture.cpp  texture.hpp  tga.cpp  tif.cpp  txf.cpp  txf.hpp  wheel.cpp  wheel.hpp  xbm.cpp  xpm.cpp
src/3d/: Makefile.am  axis.cpp  axis.hpp  camera.cpp  draw.cpp  draw.hpp  flare.cpp  glu.cpp  glu.hpp  grid.cpp  grid.hpp  ogl.cpp  ogl.hpp  render.cpp  render.hpp  solid.cpp  solid.hpp  vicinity.cpp  wheel.cpp  wheel.hpp
src/ai/: Makefile  Makefile.am  Makefile.in  ai.cpp  ai.hpp  aiinit.cpp  aiinit.hpp  analyseur.ml  analyseur.mli  dummy_.ml  requeteAffichage.ml  requeteAffichage.mli  requeteLexer.ml  requeteLexer.mli  requeteLexer.mll  requeteParser.ml  requeteParser.mli  requeteParser.mly  requeteSemantique.ml  requeteSemantique.mli  requeteSyntax.mli  stringLexer.ml  stringLexer.mli  stringLexer.mll  stringParser.ml  stringParser.mli  stringParser.mly  vicinity.cpp
src/base/: Makefile.am  base64.cpp  base64.hpp  cache.cpp  cache.hpp  color.cpp  color.hpp  defaults.hpp  defines.hpp  endian.cpp  endian.hpp  env.cpp  env.hpp  file.cpp  file.hpp  format.cpp  format.hpp  http.cpp  http.hpp  includes.hpp  log.cpp  log.hpp  macros.hpp  matvec.cpp  matvec.hpp  md5.cpp  md5.hpp  nsl.cpp  nsl.hpp  pref.cpp  pref.hpp  random.cpp  random.hpp  report.cpp  report.hpp  socket.cpp  socket.hpp  sql.cpp  sql.hpp  stat.cpp  (+26 more)
src/gui/: CONFIG_H.t  COPYING.t  COPYRIGHT.t  ChangeLog.t  DTD.t  Makefile  Makefile.am  Makefile.in  README.t  TODO.t  addobj.cpp  capture.cpp  capture.hpp  dialog.cpp  filemenu.cpp  gui.cpp  gui.hpp  joystick.cpp  joystick.hpp  keys.cpp  keys.hpp  message.cpp  message.hpp  motion.cpp  motion.hpp  mvt.cpp  mvt.hpp  navig.cpp  navig.hpp  palette.cpp  palette.hpp  panels.cpp  panels.hpp  pitch.cpp  pitch.hpp  scene.cpp  scene.hpp  theme.cpp  theme.hpp  vncdialog.cpp  (+3 more)
src/man/: Makefile  Makefile.am  Makefile.in  vacs.8  vaps.8  vrel.1  vreng.1
src/model/: 3ds.cpp  3ds.hpp  Makefile  Makefile.am  Makefile.in  ase.cpp  ase.hpp  bap.cpp  bap.hpp  bap.t  body.cpp  body.hpp  bone.cpp  bone.hpp  boneanim.cpp  boneanim.hpp  bonelink.cpp  bonelink.hpp  bonelist.hpp  bonemesh.cpp  bonemesh.hpp  bonename.cpp  bonename.hpp  bonetri.cpp  bonetri.hpp  bonevertex.cpp  bonevertex.hpp  bvh.cpp  bvh.hpp  car.cpp  car.hpp  dxf.cpp  dxf.hpp  face.cpp  face.hpp  fap.cpp  fap.hpp  gestures.hpp  gestures.txt  lwo.cpp  (+18 more)
src/net/: Makefile  Makefile.am  Makefile.in  channel.cpp  channel.hpp  event.cpp  event.hpp  md5.cpp  md5.hpp  netobj.cpp  netobj.hpp  netprop.cpp  netprop.hpp  noid.cpp  noid.hpp  payload.cpp  payload.hpp  rtp.cpp  rtp.hpp  sap.cpp  sap.hpp  session.cpp  session.hpp  source.cpp  source.hpp  vac.cpp  vac.hpp  vacc.cpp  vacc.hpp  vrep.hpp
src/sys/: Makefile  Makefile.am  Makefile.in  md5.hpp  random.cpp  str.cpp  sysdep.hpp  wait.cpp
src/tool/: Makefile.am  au.cpp  au.hpp  audio.cpp  audio.hpp  browser.cpp  browser.hpp  midi.cpp  midi.hpp  modeler.cpp  modeler.hpp  mp3.cpp  mp3.hpp  mpeg.cpp  mpeg.hpp  office.cpp  office.hpp  openal.cpp  openal.hpp  pdf.cpp  pdf.hpp  ps.cpp  ps.hpp  sound.cpp  sound.hpp  sounds.cpp  sounds.hpp  tool.cpp  tool.hpp  video.cpp  video.hpp  wav.cpp  wav.hpp  wb.cpp  wb.hpp  wget.cpp  wget.hpp  xterm.cpp  xterm.hpp
src/vjs/: Makefile.am  gen.pl  gen.pl.in
src/vmm/: ArgumentsParser.java  GlobalProperties.java  Machine.java  Makefile.am  MulticastAddress.java  Subnet.java  VREColor.java  VRERoomWriter.java  vmm
src/vnc/: Makefile  Makefile.am  Makefile.in  auth.cpp  auth.h  client.cpp  client.hpp  d3des.cpp  d3des.h  rfbproto.cpp  rfbproto.hpp  sockets.cpp  sockets.hpp  vncauth.cpp  vncauth.hpp  vnccli.cpp  vnccli.hpp  vncdes.cpp  vncdes.hpp  vncrfb.cpp  vncrfb.hpp  vncsoc.cpp  vncsoc.hpp
src/vred/: Makefile.am  board.cpp  board.hpp  bsphere.hpp  camera.cpp  collide.cpp  color.hpp  doc.hpp  earth.hpp  gate.cpp  gate.hpp  gif.cpp  gif.hpp  io.cpp  item.hpp  lex.yy.cpp  main.cpp  main.hpp  map.cpp  matrix.hpp  mirage.cpp  output.cpp  output.hpp  safe.hpp  solid.cpp  solid.hpp  sphere.cpp  sphere.hpp  tex.cpp  thing.cpp  thing.hpp  ui.cpp  ui.hpp  vect.hpp  vre.hpp  vred.y  wall.cpp  wall.hpp  web.hpp  y.tab.cpp  (+1 more)
src/vrel/: Makefile.am  and.hpp  aoi.cpp  app.cpp  compound.hpp  constructor.cpp  decllist.cpp  dif.cpp  dif.hpp  div.cpp  div.hpp  door.cpp  egal.cpp  egal.hpp  envconstr.hpp  gate.hpp  infegal.hpp  lex.yy.cpp  logical.hpp  mod.cpp  mod.hpp  namelist.hpp  number.cpp  number.hpp  opp.cpp  or.cpp  primitive.hpp  step.cpp  str.cpp  str.hpp  sub.cpp  supegal.cpp  supegal.hpp  tabobj.cpp  tabvar.hpp  var.cpp  vrel.cpp  walls.cpp  while.cpp  y.tab.h
src/vreng/: Makefile  Makefile.am  Makefile.in  MakefileGLUT  base64.cpp  base64.hpp  cache.cpp  cache.hpp  color.cpp  defaults.hpp  env.cpp  env.hpp  file.cpp  file.hpp  format.cpp  format.hpp  http.cpp  http.hpp  log.cpp  log.hpp  macros.hpp  matvec.cpp  matvec.hpp  openal.cpp  openal.hpp  pref.cpp  pref.hpp  prefs.t  prof.cpp  prof.hpp  reader.cpp  reader.hpp  report.cpp  scene.cpp  scene.hpp  socket.cpp  socket.hpp  sound.cpp  stat.cpp  stat.hpp  (+20 more)
src/vrl/: Makefile.am  configure.ac  lex.yy.cpp  sysdep.h  vrl.cpp  y.tab.cpp  y.tab.h
src/wo/: COPYRIGHT  Makefile  Makefile.am  Makefile.in  accessory.cpp  accessory.hpp  android.cpp  android.hpp  animator.cpp  animator.hpp  animx3d.cpp  animx3d.hpp  aoi.cpp  aoi.hpp  area.cpp  area.hpp  ball.cpp  ball.hpp  bgcolor.cpp  bgcolor.hpp  bird.cpp  bird.hpp  board.cpp  board.hpp  book.cpp  book.hpp  bubble.cpp  bubble.hpp  bullet.cpp  bullet.hpp  bumper.cpp  bumper.hpp  button.cpp  button.hpp  carousel.cpp  carousel.hpp  cart.cpp  (+187 more)
(+6539 files in other folders)
